# AteltaSDK

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: rename_project.sh
.github/backup/: setup.py
ateltasdk/: __init__.py  __main__.py  base.py  cli.py  streamer.py
ateltasdk/pose/: draw.py  pose_matcher.py  pose_utils.py
tests/: test_base.py
