[tool.poetry]
name = "ateltasdk"
version = "0.1.1"
description = ""
authors = ["anindyadeep"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"
mypy = "^1.0.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ateltasdk = 'ateltasdk.__main__:main'
